--- a/_posts/2020-11-15-tests.md
+++ b/_posts/2020-11-15-tests.md
@@ -3,7 +3,12 @@ layout: post
 title:  "Quelques tests"
 date:   2020-11-15 16:08:00 +0200
 categories: foo bar
+tags: tag1 tag3 tag4
 excerpt: Un post de test
+image:
+  path: /images/test-post-image.jpg
+  thumbnail: /images/test-post-image-thumb.jpg
+  caption: "Photo from [WeGraphics](http://wegraphics.net/downloads/free-ultimate-blurred-background-pack/)"
 ---
 
 ## Paragraphes
@@ -57,6 +62,10 @@ x&=y           &  w &=z              &  a&=b+c\\
 -4 + 5x&=2+y   &  w+2&=-1+w          &  ab&=cb
 \end{align*}
 ```
+
+## Tweet
+
+<blockquote class="twitter-tweet"><p lang="fr" dir="ltr">💉 Au cours de l&#39;histoire, la <a href="https://twitter.com/hashtag/vaccination?src=hash&amp;ref_src=twsrc%5Etfw">#vaccination</a> a sauvé des millions de vies. C’est l’un des plus grands succès de santé publique. ⚕️<a href="https://twitter.com/hashtag/vaccins?src=hash&amp;ref_src=twsrc%5Etfw">#vaccins</a> <a href="https://twitter.com/hashtag/verified?src=hash&amp;ref_src=twsrc%5Etfw">#verified</a> <a href="https://twitter.com/APHP?ref_src=twsrc%5Etfw">@APHP</a> <a href="https://twitter.com/gavi?ref_src=twsrc%5Etfw">@GAvi</a> <a href="https://twitter.com/nathanpsmad?ref_src=twsrc%5Etfw">@nathanpsmad</a> <a href="https://twitter.com/WHO_Europe?ref_src=twsrc%5Etfw">@WHO_Europe</a> <a href="https://t.co/AlBglCpzE0">pic.twitter.com/AlBglCpzE0</a></p>&mdash; ONU France et Monaco (@ONU_France) <a href="https://twitter.com/ONU_France/status/1327906688523898881?ref_src=twsrc%5Etfw">November 15, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 ## Autres paragraphes
 
