--- a/_posts/2020-11-15-tests.md
+++ b/_posts/2020-11-15-tests.md
@@ -5,11 +5,9 @@ date:   2020-11-15 16:08:00 +0200
 categories: foo bar
 tags: tag1 tag3 tag4
 excerpt: Un post de test
-image:
-  path: /images/test-post-image.jpg
-  thumbnail: /images/test-post-image-thumb.jpg
-  caption: "Photo from [WeGraphics](http://wegraphics.net/downloads/free-ultimate-blurred-background-pack/)"
 ---
+
+{% include toc %}
 
 ## Paragraphes
 
