--- a/_posts/2020-11-15-tests.md
+++ b/_posts/2020-11-15-tests.md
@@ -2,8 +2,9 @@
 layout: post
 title:  "Quelques tests"
 date:   2020-11-15 16:08:00 +0200
-categories: foo bar
+categories: Tests Configuration Jekyll
 tags: tag1 tag3 tag4
+difficulty: 3
 excerpt: Un post de test
 ---
 
