--- a/_posts/2020-11-15-tests.md
+++ b/_posts/2020-11-15-tests.md
@@ -12,7 +12,7 @@ excerpt: Un post de test
 
 ## Paragraphes
 
-Lorem ipsum dolor sit amet, **consectetur** adipiscing elit. Aliquam *elit* quam, interdum at quam consequat, aliquam euismod neque. Praesent ac bibendum orci. Vivamus ornare, metus eleifend luctus vestibulum, odio mi rhoncus ipsum, nec congue lacus turpis vel leo. Nulla eu porttitor est. Nullam vestibulum, odio ut efficitur maximus, ante nisl tincidunt mauris, id blandit tortor tellus ac orci. Vestibulum porta eleifend facilisis.
+Lorem ipsum dolor sit amet, **consectetur** adipiscing elit[^foo]. Aliquam *elit* quam, interdum at quam consequat, aliquam euismod neque. Praesent ac bibendum orci. Vivamus ornare, metus eleifend luctus vestibulum, odio mi rhoncus ipsum, nec congue lacus turpis vel leo. Nulla eu porttitor est. Nullam vestibulum, odio ut efficitur maximus, ante nisl tincidunt mauris, id blandit tortor tellus ac orci. Vestibulum porta eleifend facilisis.
 
 Sed sit amet ultrices libero. Suspendisse ornare diam massa, sed semper nisl scelerisque in. In aliquam bibendum turpis, sit amet fringilla nulla dignissim nec. Vestibulum volutpat, turpis quis auctor lacinia, nulla nisi consectetur tellus, ut efficitur sem ex ut ex. Morbi convallis pellentesque libero vel mollis. Donec ultricies nibh nec enim aliquam dapibus. Nulla gravida justo in augue dapibus iaculis. In commodo ipsum semper lorem finibus placerat. Mauris posuere sodales turpis, et molestie lacus porttitor quis.
 
@@ -75,3 +75,5 @@ Maecenas ac tortor vulputate, finibus tellus sed, posuere nisi. Duis porta mauri
 In posuere dapibus tortor at feugiat. Vivamus quis risus in est tempor lobortis. Integer non facilisis orci. Aliquam pellentesque fringilla lectus, eget porttitor eros commodo at. Nunc venenatis varius ipsum, ac interdum sem laoreet non. Curabitur eget tristique quam. Praesent interdum ac urna at tempus.
 
 Nullam mollis finibus tellus, nec imperdiet purus sodales et. Proin sodales sem ut aliquam porta. Morbi elementum felis imperdiet tellus suscipit tristique. Donec egestas efficitur leo at finibus. Aliquam hendrerit magna sodales cursus iaculis. Aliquam vestibulum massa a elit mattis, vel egestas dolor iaculis. Vestibulum ac mi velit. Suspendisse mollis, purus in hendrerit hendrerit, justo nisl dictum quam, ut cursus dolor arcu malesuada leo. Nullam enim mauris, tempor sit amet sollicitudin et, auctor egestas augue. Suspendisse potenti.
+
+[^foo]: yolo
